En hel del har gjorts iden här committen, har fått göra nya sidor för admin för att kunna visa hur det ser ut när de är inloggade

--- a/design/design/Views/Admin/Felanmalan.cshtml
+++ b/design/design/Views/Admin/Felanmalan.cshtml
@@ -126,14 +126,8 @@
                     </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4 col-lg-4 rightdiv">
-            <p class ="felanmalan-info">
-                <div class="btnredigera btn-group-xs">
-                    <button class="btn" type="button" id="redigerabtn">
-                        Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
-                    </button>
-                </div>
-                <br /><b>På hemsidan kan ni göra felanmälan dygnet runt.</b>
+        <div class="col-md-4 col-sm-4 col-lg-4 rightdiv"  >
+            <p class ="felanmalan-info"><br /><b>På hemsidan kan ni göra felanmälan dygnet runt.</b></pclass>
             <p class="felanmalan-info">
                 <br /><b>
                 Om ni ej fått återkoppling inom 1-2 veckor efter att
