--- a/design/design/Views/Admin/Intresseanmalan.cshtml
+++ b/design/design/Views/Admin/Intresseanmalan.cshtml
@@ -142,7 +142,7 @@
                 <div class="falt">
                     <label>Antal rum: </label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-door"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="ruminput" placeholder="Antal rum" class="form-control input-md" type="number">
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                 <div class="falt">
                     <label>Våning: </label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-door"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="våninginput" placeholder="Våning" class="form-control input-md" type="number">
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                 <div class="falt">
                     <label>Maxhyra: </label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-door"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="hyrainput" placeholder="Maxhyra" class="form-control input-md" type="number">
                     </div>
                 </div>
@@ -301,12 +301,6 @@
         </div>
         <div >
             <div class="col-md-5 col-sm-5 col-lg-5 rightdiv information information1" >
-                <div class="btnredigera btn-group-xs">
-                    <br />
-                    <button class="btn" type="button" id="redigerabtn">
-                        Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
-                    </button>
-                </div>
                 <h3>Personuppgifter</h3>
                 <p>
                     
@@ -328,29 +322,23 @@
                     Om skälet till att ansökan/intresseanmälan avslagits är att du inte kunnat godtas på grund av misskötsamhet
                     i ett tidigare boende, bevaras dock uppgifterna under tre månader efter avslagsbeslut.
                 </p>
-                <hr size="1" color="#996633">
+            </div>
 
-                <br />
-                
-
+            <div class="col-md-5 col-sm-5 col-lg-5 rightdiv information" style="margin-top:50px;">
                 <h3>På hemsidan kan ni göra intresseanmälan dygnet runt.</h3>
                 <p>
-
+                    
                     När ni gör en intresseanmälan står ni i
                     bostadskön i tre månader, det är sedan upp
                     till er att uppdatera er anmälan för
                     att stå kvar i bostadskön.
-                    <br />
+                   <br />
                     <br />Mer information om intresseanmälan och
                     bostadskön hittar ni i <a class="link" href="~/Home/FragorOchSvar">frågor och svar</a>.
 
                     <br />
                 </p>
-              
-                <br />
             </div>
-
-            
         </div>
     </div>
 </div>
