--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "FragorOchSvar";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <center><h2 class="sidrubrik">Frågor och svar</h2></center>
@@ -17,7 +18,7 @@
             <div class="btnredigera btn-group-xs">
                 <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
                     Redigera
-                    <span class="caret"></span>
+                    <span><i class="glyphicon glyphicon-pencil"></i></span>
                 </button>
             </div>
         </div>
