--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Kontakt";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <center><h2 class="sidrubrik">Kontakta oss</h2></center>
@@ -18,7 +19,7 @@
                 <div class="btnredigera btn-group-xs">
                     <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
                         Redigera
-                        <span class="caret"></span>
+                        <span><i class="glyphicon glyphicon-pencil"></i></span>
                     </button>
                     <div class="redigera" id="redigera" style="display:none;">
                         <div class="col-md-12">
@@ -64,7 +65,7 @@
                     <br />
                     <div class="btnredigera btn-group-xs">
                         <button class="btn" type="button" id="redigerabtn">
-                            Redigera
+                            Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
                         </button>
                     </div>
             </div>
@@ -195,11 +196,11 @@
                         <div class="row">
                             
                             
-                                <div class="col-lg-2">
+                                <div class="col-lg-3">
                                     <div class="btnredigera btn-group-xs" style="text-align:left;">
-                                        <button class="btn btn-default" type="button" id="redigerabtn" onclick="showredigera2()">
+                                        <button class="btn " type="button" id="redigerabtn" onclick="showredigera2()">
                                             Redigera
-                                            <span class="caret"></span>
+                                            <span><i class="glyphicon glyphicon-pencil"></i></span>
                                         </button>
                                     </div>
                                     
@@ -273,11 +274,11 @@
                             <a href="mailto:anna@je-bygg.se" target="_blank">anna@je-bygg.se</a>
                         </p>
                         <div class="row">
-                            <div class="col-lg-2">
+                            <div class="col-lg-3">
                                 <div class="btnredigera btn-group-xs" style="text-align:left;">
-                                    <button class="btn btn-default" type="button" id="redigerabtn" onclick="showredigera()">
+                                    <button class="btn " type="button" id="redigerabtn">
                                         Redigera
-                                        <span class="caret"></span>
+                                        <span><i class="glyphicon glyphicon-pencil"></i></span>
                                     </button>
                                 </div>
                             </div>
@@ -323,7 +324,7 @@
                                 <div class="btnredigera btn-group-xs" style="text-align:right;">
                                     <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
                                         Redigera
-                                        <span class="caret"></span>
+                                        <span><i class="glyphicon glyphicon-pencil"></i></span>
                                     </button>
                                 </div>
 
@@ -357,7 +358,7 @@
                                 <div class="btnredigera btn-group-xs" style="text-align:right;">
                                     <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
                                         Redigera
-                                        <span class="caret"></span>
+                                        <span><i class="glyphicon glyphicon-pencil"></i></span>
                                     </button>
                                 </div>
 
