--- a/design/design/Views/Admin/seriorboende.cshtml
+++ b/design/design/Views/Admin/seriorboende.cshtml
@@ -4,19 +4,19 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<center><h2 class="sidrubrik">Seniorboende</h2></center>
+<center><h2 class="sidrubrik">Våra fastigheter/Seniorboende 55+</h2></center>
 
 <div class="maincontainer1">
     <div class="maincontainer ontop">
-
-            <div class="btn-group">
-                <button class="btn" type="button" id="redigerabtn">
-                    Redigera sidan <span><i class="glyphicon glyphicon-pencil"></i></span>
-                </button>
-            </div>
+        <center>
             <div class="row">
-           
-
+                <div class="col-lg-4">
+                    <a class="link" href="~/Admin/Varafastigheter"><< Tillbaka till våra fastigheter</a>
+                </div>
+            </div>
+            <br />
+            <br />
+            <div class="row">
                 <div class="col-md-2">
                 </div>
                 <div class="col-md-8">
@@ -35,7 +35,7 @@
                 </div>
 
             </div>
-
+        </center>
 
         <h4 style=" text-align:center;">Vill du veta mer om seniorboendet Nära Till? Gå till seniorboendets egen hemsida: <a href="http://www.naratill.se/" target="_blank">www.naratill.se</a>.</h4>
 
